test/should_fail/dangle_003.grg
rule r {
	pattern {
		x: Node;
		y: Node;
		x -e:Edge-> y;
	}
	replace{
		x-e->;
	}
}
